--- a/linux-2.6.17/drivers/rtc/Kconfig
+++ b/linux-2.6.17/drivers/rtc/Kconfig
@@ -157,6 +157,12 @@ config RTC_DRV_VR41XX
 	  To compile this driver as a module, choose M here: the
 	  module will be called rtc-vr41xx.
 
+config RTC_DRV_AT91
+	tristate "AT91RM9200"
+	depends on RTC_CLASS && ARCH_AT91RM9200
+	help
+	  Driver for the Atmel AT91RM9200's internal RTC (Realtime Clock).
+
 config RTC_DRV_TEST
 	tristate "Test driver/device"
 	depends on RTC_CLASS
