--- a/linux-2.6.17/drivers/mtd/maps/Makefile
+++ b/linux-2.6.17/drivers/mtd/maps/Makefile
@@ -71,3 +71,5 @@ obj-$(CONFIG_MTD_PLATRAM)	+= plat-ram.o
 obj-$(CONFIG_MTD_OMAP_NOR)	+= omap_nor.o
 obj-$(CONFIG_MTD_MTX1)		+= mtx-1_flash.o
 obj-$(CONFIG_MTD_TQM834x)	+= tqm834x.o
+obj-$(CONFIG_MTD_CSB337)	+= csbxxx.o
+obj-$(CONFIG_MTD_CSB637)	+= csbxxx.o
