--- a/linux-2.6.17/drivers/spi/Kconfig
+++ b/linux-2.6.17/drivers/spi/Kconfig
@@ -75,6 +75,24 @@ config SPI_BUTTERFLY
 	  inexpensive battery powered microcontroller evaluation board.
 	  This same cable can be used to flash new firmware.
 
+config SPI_AT91
+	tristate "AT91 SPI Master"
+	depends on SPI_MASTER && ARCH_AT91RM9200 && EXPERIMENTAL
+	select SPI_BITBANG
+	select SPI_AT91_MANUAL_CS
+	help
+	  This is dumb PIO bitbanging driver for the Atmel
+	  AT91RM9200 processor.
+	  (Someone should provide a drop-in replacemnt of this code,
+	  using the native SPI hardware and its DMA controller).
+
+config SPI_AT91_MANUAL_CS
+	bool
+	help
+	  Works around an AT91RM9200 problem whereby the SPI chip-select
+	  will be wrongly disabled.  The workaround uses those pins as
+	  GPIOs instead of letting the SPI controller manage them.
+
 config SPI_MPC83xx
 	tristate "Freescale MPC83xx SPI controller"
 	depends on SPI_MASTER && PPC_83xx && EXPERIMENTAL
