--- a/linux-2.6.17/Makefile
+++ b/linux-2.6.17/Makefile
@@ -1,4 +1,4 @@
-VERSION = 2
+ARCHVERSION = 2
 PATCHLEVEL = 6
 SUBLEVEL = 17
 EXTRAVERSION =
@@ -172,9 +172,8 @@ SUBARCH := $(shell uname -m | sed -e s/i.86/i386/ -e s/sun4u/sparc64/ \
 # Default value for CROSS_COMPILE is not to prefix executables
 # Note: Some architectures assign CROSS_COMPILE in their arch/*/Makefile
 
-ARCH		?= $(SUBARCH)
-CROSS_COMPILE	?=
-
+ARCH		?= arm
+CROSS_COMPILE	?= ../tools/bin/arm-linux-
 # Architecture as present in compile.h
 UTS_MACHINE := $(ARCH)
 
